updated layout issues & styles details

--- a/src/css/InfiniteLoader.css
+++ b/src/css/InfiniteLoader.css
@@ -25,7 +25,7 @@
 
 .ip__worm1,
 .ip__worm2 {
-	animation: worm1 2s linear infinite;
+	animation: worm1 1.2s linear infinite;
 }
 .ip__worm2 {
 	animation-name: worm2;
